--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>JS Notes 🥰</title>
-    <script src="src/scripts/autoFn.js" async defer></script>
+<!--    <script src="src/scripts/autoFn.js" async defer></script>-->
     <!--    <script src="src/scripts/notes.js" async defer></script>-->
 <!--    <script src="src/scripts/data.js" async defer></script>-->
-<!--    <script src="src/scripts/this.js" async defer></script>-->
+    <script src="src/scripts/this.js" async defer></script>
 
 
 </head>
 <body>
-
+<h1 id ='title'>Kliknij mnie</h1>
 </body>
 </html>
